--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,7 @@
 # improve colors
 set -g default-terminal 'screen-256color'
-
+set -sg escape-time 0
+ 
 # act like vim
 setw -g mode-keys vi
 bind h select-pane -L
@@ -27,8 +28,6 @@ set -g status-bg black
 set -g status-fg white
 
 # remove administrative debris (session name, hostname, time) in status bar
-#set -g status-left ''
-#set -g status-right ''
 set -g status-left ' '
 set -g status-right '#[fg=yellow]%d %b %R#[default] '
 set-window-option -g window-status-current-bg yellow
