Tweaks to scrolling and splitting
* Enable mousewheel scrolling
* Use - and | for splits

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 # improve colors
 set -g default-terminal 'screen-256color'
-set -sg escape-time 0
- 
+set -s escape-time 0
+
 # act like vim
 setw -g mode-keys vi
 bind h select-pane -L
@@ -42,6 +42,15 @@ bind-key C-a last-pane
 # show activity in other windows
 set -g monitor-activity on
 set -g visual-activity on
+
+# allow scrolling with mousewheel
+set -g mode-mouse on
+
+# use - and | for splits
+unbind %
+bind | split-window -h
+unbind '"'
+bind - split-window -v
 
 # Local config
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
