--- a/tmux.conf
+++ b/tmux.conf
@@ -29,7 +29,7 @@ set -g status-fg white
 
 # remove administrative debris (session name, hostname, time) in status bar
 set -g status-left ' '
-set -g status-right '#[fg=yellow]%d %b %R#[default] '
+set -g status-right '#[fg=yellow]%R#[default] '
 set-window-option -g window-status-current-bg yellow
 set-window-option -g window-status-current-fg black
 
