--- a/tmux.conf
+++ b/tmux.conf
@@ -1,56 +1,98 @@
-# improve colors
-set -g default-terminal 'screen-256color'
-set -s escape-time 0
+###########################
+#  Configuration
+###########################
 
-# act like vim
+# use 256 term for pretty colors
+set -g default-terminal "screen-256color"
+
+# increase scroll-back history
+set -g history-limit 5000
+
+# use vim key bindings
 setw -g mode-keys vi
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
 
-# act like GNU screen
-unbind C-b
-set -g prefix C-a
+# disable mouse
+setw -g mode-mouse off
 
-# synchronize panes
-unbind S
-bind S set-window-option synchronize-panes
-# start window numbers at 1 to match keyboard order with tmux window order
-set -g base-index 1
+# decrease command delay (increases vim responsiveness)
+set -sg escape-time 1
 
-# renumber windows sequentially after closing any of them
+# increase repeat time for repeatable commands
+set -g repeat-time 1000
+
+# re-number windows when one is closed
 set -g renumber-windows on
 
-set -g status-bg black
-set -g status-fg white
+###########################
+#  Key Bindings
+###########################
 
-# remove administrative debris (session name, hostname, time) in status bar
-set -g status-left ' '
-set -g status-right '#[fg=yellow]%R#[default] '
-set-window-option -g window-status-current-bg yellow
+# tmux prefix
+unbind C-b
+set -g prefix C-s
+
+# select panes
+bind -n C-h select-pane -L
+bind -n C-j select-pane -U
+bind -n C-k select-pane -D
+bind -n C-l select-pane -R
+
+# resize panes
+bind -n S-Left resize-pane -L 10
+bind -n S-Right resize-pane -R 10
+bind -n S-Down resize-pane -D 5
+bind -n S-Up resize-pane -U 5
+
+# windows
+bind-key c new-window -c '#{pane_current_path}'
+bind-key b break-pane -d # Move current pane to new window
+
+# window splits
+bind-key - split-window -v -c '#{pane_current_path}'
+bind-key \ split-window -h -c '#{pane_current_path}'
+
+# force a reload of the config file
+unbind r
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Go to beginning of line
+bind a send-prefix
+###########################
+# Status Bar
+###########################
+
+# enable UTF-8 support in status bar
+set -g status-utf8 on
+
+# set refresh interval for status bar
+set -g status-interval 30
+
+# center the status bar
+set -g status-justify left
+
+set -g status-left-length 50
+set -g status-right " #(date '+%A %H:%M') "
+
+###########################
+# Colors
+###########################
+
+# color status bar
+set -g status-bg '#000000'
+set -g status-fg '#999999'
+
+# highlight current window
 set-window-option -g window-status-current-fg black
+set-window-option -g window-status-current-bg green
 
-# increase scrollback lines
-set -g history-limit 10000
-
-# switch to last pane
-bind-key C-a last-pane
-
-# show activity in other windows
-set -g monitor-activity on
-set -g visual-activity on
-
-# allow scrolling with mousewheel
-set -g mode-mouse on
-
-# use - and | for splits
-unbind %
-bind | split-window -h
-unbind '"'
-bind - split-window -v
-
-# Local config
-if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
+# set color of active pane
+set -g pane-border-fg colour235
+set -g pane-border-bg black
+set -g pane-active-border-fg '#666666'
+set -g pane-active-border-bg black
