--- a/tmux.conf
+++ b/tmux.conf
@@ -31,11 +31,13 @@ set -g renumber-windows on
 unbind C-b
 set -g prefix C-s
 
-# select panes
-bind -n C-h select-pane -L
-bind -n C-j select-pane -U
-bind -n C-k select-pane -D
-bind -n C-l select-pane -R
+# Smart pane switching with awareness of vim splits
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # resize panes
 bind -n S-Left resize-pane -L 10
