--- a/tmux.conf
+++ b/tmux.conf
@@ -13,6 +13,10 @@ setw -g mode-keys vi
 
 # disable mouse
 setw -g mode-mouse off
+# set-option -g mouse-select-pane on
+# set-option -g mouse-select-window on
+# set-window-option -g mode-mouse on
+
 
 # decrease command delay (increases vim responsiveness)
 set -sg escape-time 1
