--- a/tmux.conf
+++ b/tmux.conf
@@ -11,12 +11,8 @@ set -g history-limit 5000
 # use vim key bindings
 setw -g mode-keys vi
 
-# disable mouse
-setw -g mode-mouse off
-# set-option -g mouse-select-pane on
-# set-option -g mouse-select-window on
-# set-window-option -g mode-mouse on
-
+# enable mouse
+setw -g mouse on
 
 # decrease command delay (increases vim responsiveness)
 set -sg escape-time 1
@@ -72,9 +68,6 @@ bind a send-prefix
 ###########################
 # Status Bar
 ###########################
-
-# enable UTF-8 support in status bar
-set -g status-utf8 on
 
 # set refresh interval for status bar
 set -g status-interval 30
