--- a/tmux.conf
+++ b/tmux.conf
@@ -58,10 +58,15 @@ unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -Tcopy-mode v send -X begin-selection
+bind-key -Tcopy-mode y send -X copy-pipe "reattach-to-user-namespace pbcopy"
+unbind -Tcopy-mode Enter
+bind-key -Tcopy-mode Enter send -X copy-pipe "reattach-to-user-namespace pbcopy"
+
+# bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# unbind -t vi-copy Enter
+# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Go to beginning of line
 bind a send-prefix
